<resources>
    <string name="app_name">Oops</string>
    <string name="bnv_menu_1">홈</string>
    <string name="bnv_menu_2">인벤토리</string>
    <string name="bnv_menu_3">콕콕 찌르기</string>
    <string name="bnv_menu_4">마이페이지</string>
    <string name="btn_next">다음</string>
    <string name="btn_overlap">중복 확인</string>
    <string name="btn_wonder">궁금해요! 알려 주세요</string>
    <string name="btn_start">바로 시작할게요</string>
    <string name="btn_check_end">다 체크했어요</string>
    <string name="btn_welcome">Oops 시작하기</string>
    <string name="btn_create">등록하기</string>
    <string name="btn_delete">삭제하기</string>
    <string name="btn_edit">수정하기</string>
    <string name="btn_stuff_add">소지품 추가하기</string>
    <string name="btn_edit_complete">수정 완료</string>
    <string name="btn_stuff_edit">소지품 수정</string>
    <string name="btn_complete">완료</string>
    <string name="btn_withdrawal_next">탈퇴할게요</string>
    <string name="btn_scroll_down">아래로 스크롤하기</string>
    <string name="btn_check_read">확인했습니다</string>
    <string name="btn_find">조회하기</string>
    <string name="btn_pw_reset">비밀번호 재설정</string>
    <string name="btn_pw_reset_end">비밀번호 재설정 완료</string>
    <string name="btn_go_login">로그인하러 가기</string>
    <string name="btn_code_transmit">코드전송</string>
    <string name="btn_code_certify">인증하기</string>
    <string name="radio_btn_withdrawal_1">앱 사용이 불편해요</string>
    <string name="radio_btn_withdrawal_2">사용하는 소지품이 없어요</string>
    <string name="radio_btn_withdrawal_3">새로운 계정을 사용하고 싶어요</string>
    <string name="radio_btn_withdrawal_4">앱을 자주 사용하지 않아요</string>
    <string name="radio_btn_withdrawal_5">기타</string>
    <string name="login_email">ID(E-mail)</string>
    <string name="login_email_alert">입력된 이메일이 올바르지 않아요</string>
    <string name="login_pwd">Password</string>
    <string name="login_pwd_alert">입력된 비밀번호가 올바르지 않아요</string>
    <string name="login_login">로그인</string>
    <string name="login_find">ID/PW 찾기</string>
    <string name="login_signup">회원가입</string>
    <string name="login_info">더욱 쉽게 시작하세요</string>
    <string name="login_recent">가장 최근에 로그인했어요</string>
    <string name="find_id">ID 찾기</string>
    <string name="find_id_email">이메일 입력</string>
    <string name="find_id_email_info_1">등록된 이메일이 없습니다</string>
    <string name="find_id_email_info_2">으로 가입된 이메일입니다</string>
    <string name="find_id_email_info_3">등록된 이메일입니다</string>
    <string name="find_pw_code">인증코드 입력</string>
    <string name="find_pw_code_info_1">이메일로 인증 코드를 전송했습니다</string>
    <string name="find_pw_code_info_2">인증코드가 일치하지 않습니다</string>
    <string name="find_pw_code_info_3">인증에 성공했습니다</string>
    <string name="find_pw_code_info_4">인증 시간이 만료되었습니다\n다시 코드를 전송해주세요</string>
    <string name="find_pw">PW 찾기</string>
    <string name="find_pw_new">새로운 비밀번호 입력</string>
    <string name="find_pw_new_info_1">기존 비밀번호와 일치해 사용할 수 없어요</string>
    <string name="find_pw_new_info_2">비밀번호 설정</string>
    <string name="find_pw_new_info_3">비밀번호는 영문, 숫자, 특수문자를 포함해 8자 이상이어야 해요\n영문 대문자, 소문자 둘 중 하나만 입력해 주셔도 돼요\n\n사용 가능한 특수문자: ?, !, *, ~, @, #, %, ^</string>
    <string name="signup_info_1">환영해요!</string>
    <string name="signup_info_2">어떻게 불러 드릴까요?</string>
    <string name="signup_nickname">사용하실 닉네임을 입력해 주세요</string>
    <string name="signup_nickname_alert_1">6자 이하로 입력해 주세요!</string>
    <string name="signup_nickname_alert_2">이미 사용 중인 닉네임이에요</string>
    <string name="signup_nickname_alert_3">닉네임은 한글, 영문 대소문자만 입력할 수 있어요</string>
    <string name="signup_nickname_alert_confirm">정말 멋진 이름이에요!</string>
    <string name="signup_info_3">님,</string>
    <string name="signup_info_4">본격적으로 회원가입을 위한\n이메일을 입력해 주세요</string>
    <string name="signup_email">이메일 (ex: oops@naver.com)</string>
    <string name="signup_pwd">비밀번호</string>
    <string name="signup_pwd_check">비밀번호 재확인</string>
    <string name="signup_email_alert">이미 사용 중인 이메일이에요</string>
    <string name="signup_email_alert_confirm">사용 가능한 이메일이에요!</string>
    <string name="signup_pwd_alert_1">비밀번호가 일치하지 않습니다</string>
    <string name="signup_pwd_alert_2">비밀번호는 15자까지 입력 가능해요</string>
    <string name="signup_pwd_alert_3">영문, 숫자, 특수문자를 포함해야 해요</string>
    <string name="signup_pwd_alert_4">비밀번호는 8자 이상 입력해야 해요</string>
    <string name="signup_pwd_alert_confirm">비밀번호가 일치합니다</string>
    <string name="terms_info_1">안전한 이용을 위해 동의해 주세요</string>
    <string name="terms_info_2">필수 </string>
    <string name="terms_vital">개인정보 수집 및 이용 동의</string>
    <string name="terms_info_3">선택</string>
    <string name="terms_choice">앱 푸시 알림 동의</string>
    <string name="more_terms_info_1">개인정보처리방침</string>
    <string name="more_terms_info_2">CharmIT는(은) 정보주체의 자유와 권리 보호를 위해 「개인정보 보호법」 및 관계 법령이 정한  바를 준수하여, 적법하게 개인정보를 처리하고 안전하게 관리하고 있습니다. 이에 「개인정보 보호법」  제30조에 따라 정보주체에게 개인정보 처리에 관한 절차 및 기준을 안내하고, 이와 관련한 고충을  신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</string>
    <string name="more_terms_info_3">○ 이 개인정보처리방침은 2024년 4월 1일부터 적용됩니다.</string>
    <string name="more_terms_info_4">제1조 (개인정보의 처리 목적)</string>
    <string name="more_terms_info_5">① CharmIT는(은) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는  다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 「개인정보 보호법」  제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</string>
    <string name="more_terms_info_6">
        1. 회원가입 및 관리
        \n&#160;&#160;&#160;&#160;&#160;a. 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용  방지, 각종 고지·통지, 고충처리  목적으로 개인정보를 처리합니다.
        \n2. 문의사항 관리
        \n&#160;&#160;&#160;&#160;&#160;a. 민원인의 신원 확인, 민원 사항 확인, 사실 조사를 위한 연락·통지, 처리 결과 통보 목적으로 개인정보를 처리합니다.
        \n3. 서비스 제공
        \n&#160;&#160;&#160;&#160;&#160;a. 서비스 제공, 콘텐츠 제공, 맞춤서비스 제공, 본인인증, 연령인증을 목적으로 개인정보를 처리합니다.
        \n4. 마케팅 활용
        \n&#160;&#160;&#160;&#160;&#160;a. 신규 서비스 개발 및 맞춤 서비스 제공 등을 목적으로 개인정보를 처리합니다.
    </string>
    <string name="more_terms_info_7">제2조 (개인정보의 처리 및 보유 기간)</string>
    <string name="more_terms_info_8">① CharmIT는(은) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.</string>
    <string name="more_terms_info_9">② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.</string>
    <string name="more_terms_info_10">
        • 회원가입 및 관리
        \n• 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터 <![CDATA[<1년>]]>까지 위 이용목적을 위하여 보유.이용됩니다.
        \n&#160;&#160;&#160;&#160;&#160;• 보유근거 : 동일 계정 서비스 가입 방지 및 이벤트 중복 참여 방지
    </string>
    <string name="more_terms_info_11">제3조 (처리하는 개인정보의 항목)</string>
    <string name="more_terms_info_12">① CharmIT는(은) 다음의 개인정보 항목을 처리하고 있습니다.</string>
    <string name="more_terms_info_13">
        1. 회원가입 및 관리
        \n&#160;&#160;&#160;&#160;&#160;a. 필수항목: 구글 이메일, 네이버 이메일, 이메일 주소
        \n2. 필수항목 : 로그인ID, 비밀번호, 이메일, 접속 IP 정보, 서비스 이용 기록
    </string>
    <string name="more_terms_info_14">제4조 (개인정보의 제3자 제공에 관한 사항)</string>
    <string name="more_terms_info_15">① CharmIT는(은) 정보주체의 개인정보를 개인정보의 처리 목적에서 명시한 범위 내에서 만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해 당하는 경우에만 개인정보를 제3자에게 제공하고 그 이외에는 정보주체의 개인정보를 제3자에게  제공하지 않습니다.</string>
    <string name="more_terms_info_16">② CharmIT는(은) 원활한 서비스 제공을 위해 다음의 경우 정보주체의 동의를 얻어 필요  최소한의 범위로만 제공합니다.</string>
    <string name="more_terms_info_18">제5조 (개인정보의 파기절차 및 파기방법)</string>
    <string name="more_terms_info_19">① CharmIT는(은) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보 가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.</string>
    <string name="more_terms_info_20">② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.</string>
    <string name="more_terms_info_21">
        1. 보존하는 개인정보 항목 : 로그인ID, 비밀번호, 이메일
    </string>
    <string name="more_terms_info_22">③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.</string>
    <string name="more_terms_info_23">
        1. 파기절차 : CharmIT는(은) 파기 사유가 발생한 개인정보를 선정하고, CharmIT의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.
        \n2. 파기방법 : 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.
    </string>
    <string name="more_terms_info_56">제6조 (미이용자의 개인정보 파기 등에 관한 조치)</string>
    <string name="more_terms_info_57">① CharmIT는(은) 1년간 서비스를 이용하지 않은 이용자는 휴면계정으로 전환하고, 개인정보를 별도로 분리하여 보관합니다. 분리 보관된 개인정보는 1년간 보관 후 지체없이  파기합니다.</string>
    <string name="more_terms_info_58">② CharmIT는(은) 휴먼전환 30일 전까지 휴면예정 회원에게 별도 분리 보관되는 사실  및 휴면 예정일, 별도 분리 보관하는 개인정보 항목을 이메일, 문자 등 이용자에게 통지 가능한  방법으로 알리고 있습니다.</string>
    <string name="more_terms_info_59">③ 휴면계정으로 전환을 원하지 않으시는 경우, 휴면계정 전환 전 서비스 로그인을 하시면 됩니다. 또한, 휴면계정으로 전환되었더라도 로그인을 하는 경우 이용자의 동의에 따라 휴면계정을 복원하여 정상적인서비스를 이용할 수 있습니다.</string>
    <string name="more_terms_info_24">제7조 (정보주체와 법정대리인의 권리 의무 및 행사방법에 관한 사항)</string>
    <string name="more_terms_info_25">① 정보주체는 CharmIT에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의  권리를 행사할 수 있습니다.</string>
    <string name="more_terms_info_60">1. 만 14세 미만 아동에 관한 개인정보의 열람등 요구는 법정대리인이 직접 해야 하며, 만 14세 이상의 미성년자인  정보주체는 정보주체의 개인정보에 관하여 미성년자 본인이 권리를 행사하거나 법정대리인을 통하여 권리를  행사할 수도 있습니다.</string>
    <string name="more_terms_info_26">② 권리 행사는 CharmIT에 대해 「개인정보 보호법」 시행령 제41조 제1항에 따라 서면,  전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며, CharmIT는(은) 이에 대해  지체없이 조치하겠습니다.</string>
    <string name="more_terms_info_27">③ 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수도 있습니다.  이 경우 “개인정보 처리 방법에 관한 고시(제2020–7호)” 별지 제11호 서식에 따른 위임장을  제출하셔야 합니다.</string>
    <string name="more_terms_info_28">④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여  정보주체의 권리가 제한 될 수 있습니다.</string>
    <string name="more_terms_info_29">⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는  경우에는 그 삭제를 요구할 수 없습니다.</string>
    <string name="more_terms_info_30">⑥ CharmIT는(은) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의  요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.</string>
    <string name="more_terms_info_31">제8조 (개인정보의 안전성 확보조치에 관한 사항)</string>
    <string name="more_terms_info_32">① CharmIT는(은) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</string>
    <string name="more_terms_info_33">
        1. 자율규제 단체 활동 현황
        \n2. 휴면고객 정책 운영
        \n3. 모바일 앱의 접근 권한 관리 및 동의 철회 방법 등
    </string>
    <string name="myPage_profile_gallery">갤러리에서 설정</string>
    <string name="myPage_profile_camera">프로필 사진 촬영</string>
    <string name="myPage_profile_delete">프로필 사진 삭제</string>
    <string name="withdrawal_info_1">Oops! 떠나시는 건가요?</string>
    <string name="withdrawal_info_2">그동안 서비스를 이용해 주셔서 감사합니다\n소중한 의견을 담아 더 좋은 모습으로 발전할게요</string>
    <string name="withdrawal_info_3">자유롭게 의견을 남겨 주세요</string>
    <string name="popup_nickname">닉네임 변경 불가</string>
    <string name="popup_nickname_info">설정된 닉네임은 변경할 수 없어요.\n해당 닉네임을 사용하시겠어요?</string>
    <string name="popup_cancel">취소</string>
    <string name="popup_use">사용</string>
    <string name="popup_modify">수정</string>
    <string name="popup_not_modify">수정 안함</string>
    <string name="popup_signup_email_overlap">기존 회원이셨군요!</string>
    <string name="popup_signup_email_overlap_info">이미 Oops에 가입한 회원이시네요\n로그인 페이지로 돌아가 SNS로 로그인 해 주세요</string>
    <string name="popup_push_alert">푸시 알림 미동의</string>
    <string name="popup_push_alert_info">푸시 알림 미전송 시\n꼼꼼하게 챙겨드리기 어려워요!\n알림을 받으시겠어요?</string>
    <string name="popup_disagree">동의 안함</string>
    <string name="popup_agree">동의</string>
    <string name="popup_push_alert_disagree">앱 푸시 알림 미동의</string>
    <string name="popup_push_alert_disagree_info">푸시 알림에 미동의하셨습니다</string>
    <string name="popup_confirm">확인</string>
    <string name="popup_push_alert_agree">앱 푸시 알림 동의</string>
    <string name="popup_push_alert_agree_info_1">동의해 주셔서 감사해요!\n앞으로 더욱 꼼꼼한 Oops가 될게요</string>
    <string name="popup_push_alert_agree_info_2">푸시 알림에 동의하셨습니다</string>
    <string name="popup_inventory_delete_agree">인벤토리 삭제 완료</string>
    <string name="popup_inventory_delete_agree_info">삭제가 완료되었어요</string>
    <string name="popup_friends_accept">친구 신청 수락</string>
    <string name="popup_friends_accept_info">친구가 되었어요\n오늘부터 우리는 짱친!</string>
    <string name="popup_home_inventory">기존 인벤토리 수정</string>
    <string name="popup_home_inventory_info">기존 인벤토리도 함께 수정할까요?</string>
    <string name="popup_withdrawal_title">회원 탈퇴</string>
    <string name="popup_withdrawal_info">정말 탈퇴를 완료할까요?</string>
    <string name="popup_withdrawal">탈퇴</string>
</resources>