<?xml version="1.0" encoding="utf-8"?>
<!-- 푸시 알림 동의 완료 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_push_alert_agree"
        style="@style/dialog_title"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_push_alert_agree_info_1"
        style="@style/dialog_content"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_popup_push_alert_agree_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="{yyyy}년 {mm}월 {dd}일 {hh}시 {mm}분"
        style="@style/dialog_content"
        android:gravity="center"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_push_alert_agree_info_2"
        style="@style/dialog_content"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_popup_push_alert_agree_confirm"
        android:layout_width="296dp"
        android:layout_height="33dp"
        style="@style/PopUpButtonEnableStyle"
        android:text="@string/popup_confirm"
        android:layout_marginTop="24dp"/>
</LinearLayout>