<?xml version="1.0" encoding="utf-8"?>
<!-- 회원 탈퇴 여부 재확인 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:padding="16dp">
    <TextView
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_withdrawal_title"
        style="@style/dialog_title"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_withdrawal_info"
        style="@style/dialog_content"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <Button
            android:id="@+id/btn_popup_withdrawal_cancel"
            android:layout_width="0dp"
            android:layout_height="33dp"
            style="@style/PopUpButtonCancelStyle"
            android:text="@string/popup_cancel"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/btn_popup_withdrawal_yes"
            android:layout_width="0dp"
            android:layout_height="33dp"
            style="@style/PopUpButtonDisableStyle"
            android:text="@string/popup_withdrawal"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>