<?xml version="1.0" encoding="utf-8"?>
<!-- 기본 인벤토리 수정 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_home_inventory"
        style="@style/dialog_title"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_home_inventory_info"
        style="@style/dialog_content"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <Button
            android:id="@+id/btn_popup_inventory_stuff_modify_not_modify"
            android:layout_width="0dp"
            android:layout_height="40dp"
            style="@style/PopUpButtonCancelStyle"
            android:text="@string/popup_not_modify"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/btn_popup_inventory_stuff_modify_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            style="@style/PopUpButtonDisableStyle"
            android:text="@string/popup_modify"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>