<?xml version="1.0" encoding="utf-8"?>
<!-- Bnv 메뉴 설정 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--<item
        android:id="@+id/homeFragment"
        app:showAsAction="never"
        android:enabled="true"
        android:title="@string/bnv_menu_1"/>-->
    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory_unselected_64"
        android:iconTint="@color/Gray_300"
        android:title="@string/bnv_menu_2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/toDoFragment"
        android:icon="@drawable/ic_todo_default_64"
        android:iconTint="@color/Main_500"
        android:title="@string/bnv_menu_3"
        app:showAsAction="always"/>
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_mypage_unselected_64"
        android:iconTint="@color/Gray_300"
        android:title="@string/bnv_menu_4"
        app:showAsAction="always"/>
</menu>