<?xml version="1.0" encoding="utf-8"?>
<!-- 친구 신청 수락 성공 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_friends_accept"
        style="@style/dialog_title"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_friends_accept_info"
        style="@style/dialog_content"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_popup_friends_accept_confirm"
        android:layout_width="296dp"
        android:layout_height="33dp"
        style="@style/PopUpButtonEnableStyle"
        android:text="@string/popup_confirm"
        android:layout_marginTop="24dp"/>
</LinearLayout>