<?xml version="1.0" encoding="utf-8"?>
<!-- 닉네임 변경 불가 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_nickname"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_nickname_info"
        android:textSize="14sp"
        android:textColor="@color/Gray_400"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <Button
            android:id="@+id/popup_nickname_cancel"
            android:layout_width="0dp"
            android:layout_height="33dp"
            style="@style/PopUpButtonCancelStyle"
            android:text="@string/popup_cancel"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/popup_nickname_use"
            android:layout_width="0dp"
            android:layout_height="33dp"
            style="@style/PopUpButtonEnableStyle"
            android:text="@string/popup_use"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>