<?xml version="1.0" encoding="utf-8"?>
<!-- 인벤토리 삭제 완료 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_inventory_delete_agree"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_inventory_delete_agree_info"
        android:textSize="14sp"
        android:textColor="@color/Gray_400"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_popup_inventory_delete_agree_confirm"
        android:layout_width="264dp"
        android:layout_height="33dp"
        style="@style/PopUpButtonEnableStyle"
        android:text="@string/popup_confirm"
        android:layout_marginTop="24dp"/>
</LinearLayout>