<?xml version="1.0" encoding="utf-8"?>
<!-- 푸시 알림 미동의 완료 팝업 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="247dp"
    android:layout_height="wrap_content"
    android:background="@drawable/all_radius_12"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_push_alert_disagree"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_popup_push_alert_disagree_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="{yyyy}년 {mm}월 {dd}일 {hh}시 {mm}분"
        android:textSize="10sp"
        android:textColor="@color/Gray_400"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_push_alert_disagree_info"
        android:textSize="10sp"
        android:textColor="@color/Gray_400"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_popup_push_alert_disagree_confirm"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        style="@style/PopUpButtonEnableStyle"
        android:text="@string/popup_confirm"
        android:layout_marginTop="24dp"/>
</LinearLayout>